# cmake-code-composer-studio-example

./: .ccsproject  .cproject  .gitignore  .project  CMakeLists.txt  README.md  gpiointerrupt.c  gpiointerrupt.cfg  gpiointerrupt_readme.txt  rebuild.sh
cmake/Modules/: FindXDCTools.cmake
cmake/Toolchains/: ti-cgt-toolchain.cmake
